--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -142,7 +142,7 @@ value=data.author, error=errors.author, classes=['control-medium']) }}
 <label for="field-experimentCode">*Select Experiment Code (Optional)</label><br>
 <select id="field-experimentCode" error="errors.experimentCode" name="experimentCode" class="control-medium"
   placeholder="Select" onchange="displayCodesField()">
-  <option value="None"></option>
+  <option value="None">N/A</option>
   <option value="NWFP code">NWFP code</option>
   <option value="NW experiment code">NW experiment code</option>
   <option value="Other">Other Code </option>
