--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -927,4 +927,10 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
   }
 </script>
 
+<!-- <input type="text" id="field-test" name="test">
+<script>
+  var cuser = "{{ user.name }}"
+  console.log("{{ user.id }}")
+</script> -->
+
 {% endblock %}
