--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/additional_info.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/additional_info.html
@@ -268,5 +268,16 @@
   <td class="dataset-details">{{ pkg_dict.subject }}</td>
 </tr>
 {% endif %}
-
+{% if pkg_dict.geoLowLeft %}
+<tr>
+  <th scope="row" class="dataset-label">{{ _("Geo Location Low Left Corner") }}</th>
+  <td class="dataset-details">{{ pkg_dict.geoLowLeft }}</td>
+</tr>
+{% endif %}
+{% if pkg_dict.geoTopRight %}
+<tr>
+  <th scope="row" class="dataset-label">{{ _("Geo Location Top Right Corner") }}</th>
+  <td class="dataset-details">{{ pkg_dict.geoTopRight }}</td>
+</tr>
+{% endif %}
 {% endblock %}
