--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -85,5 +85,9 @@
 {% endblock %}
 {% block subject %}
 {% endblock %}
+{% block geoLowLeft %}
+{% endblock %}
+{% block geoTopRight %}
+{% endblock %}
 
 #}
