--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -85,9 +85,13 @@
 {% endblock %}
 {% block subject %}
 {% endblock %}
-{% block geoLowLeft %}
+{% block geoLowLeftLatitude %}
 {% endblock %}
-{% block geoTopRight %}
+{% block geoLowLeftLongitude %}
+{% endblock %}
+{% block geoTopRightLatitude %}
+{% endblock %}
+{% block geoTopRightLongitude %}
 {% endblock %}
 
 #}
