--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/additional_info.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/additional_info.html
@@ -283,7 +283,7 @@
 {% if pkg_dict.geoTopRightLatitude %}
 <tr>
   <th scope="row" class="dataset-label">{{ _("Geo Latitude Top Right Corner") }}</th>
-  <td class="dataset-details">{{ pkg_dict.geoTopRight }}</td>
+  <td class="dataset-details">{{ pkg_dict.geoTopRightLatitude }}</td>
 </tr>
 {% endif %}
 {% if pkg_dict.geoTopRightLongitude %}
