--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -6,6 +6,12 @@
 <!-- Creator Fields -->
 <!--                -->
 <!--                -->
+<style>
+  /* Apply green color to all <p> elements */
+  p {
+      color: green;
+  }
+</style>
 <label><strong> Creator Details (Mandatory)</strong></label><br><br>
 <!-- First Name -->
 <label for="field-given_name">*Given Name</label><br>
