--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -875,10 +875,10 @@ Info'), value=data.resourceType, error=errors.resourceType, classes=['control-me
 <!--                  -->
 <label><strong> Geo Location Box </strong></label><br><br>
 
-<label for="field-geoLowLeftLatitude"> Geo Latitude lower left corner </label><br>
+<label for="field-geoLowLeftLatitude"> Geo Latitude Lower Left Corner </label><br>
 <input type="text" id="field-geoLowLeftLatitude" name="geoLowLeftLatitude" value="{{ data.geoLowLeftLatitude }}"><br><br>
 
-<label for="field-geoLowLeftLongitude"> Geo Longitude lower left corner </label><br>
+<label for="field-geoLowLeftLongitude"> Geo Longitude Lower Left Corner </label><br>
 <input type="text" id="field-geoLowLeftLongitude" name="geoLowLeftLongitude" value="{{ data.geoLowLeftLongitude }}"><br><br>
 
 <label for="field-geoTopRightLatitude"> Geo Latitude Top Right Corner </label><br>
