--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -47,6 +47,7 @@ value=data.author, error=errors.author, classes=['control-medium']) }} -->
   var displayElement = document.getElementById('displayCreatorField');
   var fullname = [];
   document.getElementById('errorMessage').innerHTML = "Creators: " + "{{ data.author }}";
+  // console.log("{{ user }}");
 
 
   function addCreator() {
