--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -23,7 +23,9 @@
 {% endblock %}
 {% block resourceType %}
 {% endblock %}
-{% block collectedDate %}
+{% block collectionStartDate %}
+{% endblock %}
+{% block collectionEndDate %}
 {% endblock %}
 {% block createdDate %}
 {% endblock %}
